--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html> 
 
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset=utf-8/>
 </head>
 
@@ -10,12 +11,20 @@
 
     <h1>ic-07 - Intro to JavaScript</h1>
 
-    <button type="button">Button 1</button>
+    <button type="button" onclick="button1Clicked()">Button 1</button>
 
     <div id="random_num">
         When Button 1 is clicked, a random number should appear here. 
     </div>
 
+    <div id="changingColorCircle">
+        <button type="button2" onclick="button2Clicked()">Button 2</button>
+        <svg>
+            <circle class = "circle" r="40" cx = "50" cy = "50"/>
+        </svg>
+    </div>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
